### 11-Jan-2022 - MDD - Version 10.3.4   
    Fixed a bug which was triggered ONLY when executing the condaforge
    distribution on MacOS where failure was due to a missing return 
    statement.  Only call computeDarktime() once to compute the updated
    DARKTIME primary keyword and function return is now void. Update
    the keyword in main to avoid passing extra data by reference.

### 24-May-2021 - MDD - Version 10.3.3
    Fixed a bug associated with the FLASHDUR computation.  The FLASHDUR
    keyword was updated in the CRJ/CRC headers to be the sum of
    the individual input images as this keyword is used in ACS2D to
    scale the flash reference file for flash correction.  Fixed a bug
    associated with the DARKTIME computation.  Code written for CALACS
    10.2.2 was moved from ACS2D to ACSCCD so every BLV_TMP file has the
    correct DARKTIME keyword value.  Also, the DARKTIME keyword was updated
    in the CRJ/CRC headers to be the sum of the individual input images. Only
    the DARKTIME value in the input file header is used to scale the dark
    reference file for the dark correction.

### 26-Apr-2021 - MDD - Version 10.3.2
    Fixed a bug introduced when the build manager reworked code to remove circular
    dependencies caused by the introduction of the acscteforwardmodel code.  The
    name of the executable was inadvertently changed from "acscteforwardmodel.e"
    to "acsforwardmodel.e".  The ACS team requested the name be changed back to
    the original as scripts and documentation are impacted.

###  07-Apr-2021 - MDD - Version 10.3.1
    Fixed a bug introduced when the build manager reworked code to
    remove circular dependencies caused by the introduction of the
    acscteforwardmodel code.  Resolved the segmentation fault when
    trying to execute the standalone executables "acscte.e" and
    "acsforwardmodel.e".

### 12-Feb-2021 - JH (Done during build creation for operations for 10.3.0)